# rlm_proxy

./: .env.example  .gitignore  INSTALL.md  README.md  admin.html  admin.py  auth.py  circuit_breaker.py  config.py  dispatcher.py  install.ps1  install.sh  log_buffer.py  main.py  metrics.py  ollama_client.py  prompt_profiles.py  providers.py  pyproject.toml  repl.py  repl_utils.py  request_queue.py  rlm_engine.py  schemas.py  system_prompts.py  test_proxy.sh  test_rlm.py  test_unit.py  trajectory_logger.py  uninstall.ps1  uninstall.sh
docs/superpowers/specs/: 2026-03-16-production-hardening-smarter-reasoning-design.md  2026-03-18-admin-ui-design.md
