[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-proxy"
version = "0.3.0"
description = "Recursive Language Model proxy for local Ollama models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "RestrictedPython>=7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
rlm-proxy = "rlm_proxy.main:main"

[tool.setuptools.packages.find]
include = ["rlm_proxy*"]
